--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,10 +5,7 @@ html class='no-js' lang=I18n.locale
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
 
     = javascript_include_tag "application", "data-turbolinks-track" => true
-    javascript:
-      document.Clarat.algolia_app_id = "#{Rails.application.secrets.algolia['app_id']}";
-      document.Clarat.algolia_pub_key = "#{Rails.application.secrets.algolia['pub_key']}";
-      document.Clarat.algolia_index = "#{Rails.application.secrets.algolia['index']}";
+    = render '/layouts/partials/javascript_config'
 
     = csrf_meta_tags
   body
