--- a/app/views/offers/shared/_basic_search.html.slim
+++ b/app/views/offers/shared/_basic_search.html.slim
@@ -1,5 +1,5 @@
 = semantic_form_for SearchForm.new, url: offers_path, html: { method: :get } do |f|
   = f.input :query, label: false, input_html: { class: 'typeahead', placeholder: 'I am looking for...', spellcheck: false, autocomplete: 'off', autofocus: true }
   = f.input :search_location, label: false, input_html: { value: geoloc_to_s }
-  = f.input :geoloc, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
+  = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
   = f.action :submit, label: '->'
