--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,3 +1,24 @@
-h1 Clarat
-
-= render '/offers/shared/basic_search'
+.background-image
+  .container.container-full-size
+    .row
+      = render '/layouts/partials/about_teaser'
+      = render '/offers/shared/basic_search'
+.about-yellow
+  .about-2c
+    .container
+      .row
+        .col-lg-6.hidden-xs.hidden-sm.welcome-elements
+          = image_tag('stock/child.png')
+        .col-lg-6
+          h1
+            | Wie funktioniert Clarat
+          .decription-2c
+            | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
+            | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
+            | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
+            | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
+            | erreichen können – und das sie erreicht.
+            br
+            br
+            | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
+            | Es klärt auf.
