Setup preliminary home view

--- a/app/views/layouts/partials/_about_teaser.html.slim
+++ b/app/views/layouts/partials/_about_teaser.html.slim
@@ -1,8 +1,8 @@
 .about-teaser
-  .about-background.about-yellow
+  .about-background.yellow-background
     .about-text
       | Angebote der Kinder- und
   br
-  .about-background.about-yellow
+  .about-background.yellow-background
     .about-text
       | Jugendhilfe so einfach finden wie nie
