--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -3,16 +3,17 @@
     .row
       = render '/layouts/partials/about_teaser'
       = render '/offers/shared/basic_search'
-.about-yellow
+.yellow-background
   .about-2c
     .container
-      .row
-        .col-lg-6.hidden-xs.hidden-sm.welcome-elements
+      .row.position-relative
+        .col-lg-6.hidden-xs.hidden-sm.position-absolute.bottom-zero
           = image_tag('stock/child.png')
-        .col-lg-6
-          h1
-            | Wie funktioniert Clarat
-          .decription-2c
+        .col-lg-offset-6
+          .description-2c
+            h1
+              | Wie funktioniert Clarat
+
             | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
             | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
             | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
@@ -22,3 +23,24 @@
             br
             | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
             | Es klärt auf.
+.about-2c
+  .container
+    .row.position-relative
+      .col-lg-6
+        .description-2c
+          h1
+            | Warum machen wir Clarat
+
+          | Für Kinder, Jugendliche und Familien mit Beratungsbedarf bietet
+          | CLARAT eine einfach zu bedienende Oberfläche, auf der über eine
+          | leicht verständliche Suchfunktion die Einrichtungen gefiltert
+          | werden, die in erreichbarer Nähe sind und zu ihrem Anliegen passen.
+          br
+          br
+          | Menschen, die als Freunde, Lehrer, Ehrenamtliche oder in anderer
+          | Funktion Zugang zu einer Familie mit Unterstützungsbedarf haben und
+          | konkrete Hilfestellung geben möchten, bietet CLARAT eine
+          | maßgeschneiderte Übersicht an inhaltlich und geographisch passenden
+          | Angeboten.
+      .col-lg-offset-6.hidden-xs.hidden-sm.position-absolute.bottom-zero
+        = image_tag('stock/child.png')
