--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 $clarat-yellow: #ffbb10;
+$clarat-hover-yellow: #f6b000;
 
 // Increase general font size
 body {
@@ -26,7 +27,6 @@ body {
   font-size: 1em;
   line-height: 1.33;
   border-radius: 6px;
-  width: 10em;
 }
 
 .btn-xlg {
@@ -40,6 +40,9 @@ body {
 
 .btn {
   background-color: $clarat-yellow;
+  &:hover {
+    background-color: $clarat-hover-yellow;
+  }
 }
 
 .background-image {
@@ -73,15 +76,41 @@ body {
   padding: 0 0.5em 0 0.5em;
 }
 
-.about-yellow {
+.yellow-background {
   background-color: $clarat-yellow;
   color: white;
 }
 
 .about-2c {
-  padding: 1em 1em 1em 1em;
+  padding: 1em 1em 0em 1em;
   .description-2c {
-    padding: 1em 5% 1em 5%;
-    text-align: justify;
+    padding-bottom: 1em;
+  }
+}
+
+.position-relative {
+  position: relative;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.bottom-zero {
+  bottom: 0;
+}
+
+.footer-font-big {
+  font-size: 3em;
+}
+
+.footer-font-small {
+  font-size: 0.8em;
+}
+
+.font-white {
+  color: white;
+  &:hover {
+    color: #d2691e;
   }
 }
