--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,3 +12,4 @@ html class='no-js' lang=I18n.locale
     = render 'layouts/partials/navigation'
     = yield
     = content_for :view_specific_scripts
+    = render 'layouts/partials/footer'
