--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -1,3 +1,7 @@
+// TODO Don't put $clarat-yellow: #ffbb1 in all the files...
+
+$clarat-yellow: #ffbb10;
+
 .navbar-transparent {
   background:transparent;
   // to make sure there is no white background (why does it work this way?)
@@ -5,9 +9,12 @@
   right: 0;
   left: 0;
   z-index: 1;
+  // Remove thin white line that screws with the image
+  border: none;
 }
 
-// Remove thin white line that screws with the image
-.navbar {
-  border: none;
+.navbar-search {
+  background-color: $clarat-yellow;
+  box-shadow: 0 1px 1px #909090;
+  position: relative;
 }
