--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -1,62 +1,16 @@
-.navbar-padding
-  h1 Results
-  ul
-    - @offers.each do |offer|
-      li= link_to offer.name, offer_path(id: offer)
-    | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-    | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-    | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-    | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-    | erreichen können – und das sie erreicht.
-    br
-    br
-    | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-    | Es klärt auf.
-    | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-    | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-    | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-    | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-    | erreichen können – und das sie erreicht.
-    br
-    br
-    | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-    | Es klärt auf.
-    | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-    | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-    | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-    | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-    | erreichen können – und das sie erreicht.
-    br
-    br
-    | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-    | Es klärt auf.
-    | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-    | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-    | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-    | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-    | erreichen können – und das sie erreicht.
-    br
-    br
-    | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-    | Es klärt auf.
-    | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-    | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-    | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-    | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-    | erreichen können – und das sie erreicht.
-    br
-    br
-    | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-    | Es klärt auf.
-    | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-    | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-    | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-    | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-    | erreichen können – und das sie erreicht.
-    br
-    br
-    | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-    | Es klärt auf.
+.grey-background
+  .container
+    .col-lg-8
+      h1
+        = @offers.count
+        |  Angebote gefunden
+      ul.search-results
+        - @offers.each do |offer|
+          .yellow-background.search-headline
+            li= link_to offer.name, offer_path(id: offer)
+          .white-background.search-subtitle
+            = offer.organization.name
+          br
 
   #map-canvas style="width:500px;height:300px" data-markers="#{@markers.to_json}" data-position="#{@position.to_json}"
 
