--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -18,3 +18,7 @@ $clarat-yellow: #ffbb10;
   box-shadow: 0 1px 1px #909090;
   position: relative;
 }
+
+.navbar-padding {
+  margin-top: -105px;
+}
