--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,4 +1,5 @@
-nav.navbar.navbar-default.navbar-transparent
-  .container
-    .navbar-header
-      = link_to image_tag('logos/clarat-logo-transparent.gif'), root_path
+.navbar-padding
+  nav.navbar.navbar-default.navbar-transparent
+    .container
+      .navbar-header
+        = link_to image_tag('logos/clarat-logo-transparent.gif'), root_path
