--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -1,8 +1,8 @@
 .navbar-fixed-top
   nav.navbar.navbar-default.navbar-search
     .container
-      .navbar-header
-        = link_to image_tag('logos/clarat-logo-transparent.gif'), root_path
+      .navbar-header.search-nav-image
+        = link_to image_tag('logos/clarat-logo-transparent-small.png'), root_path
         .main-search-nav
           = semantic_form_for SearchForm.new, url: offers_path, html: { method: :get } do |f|
             = f.input :query, label: false, input_html: { placeholder: 'Suche nach Angeboten...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg' }
