--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -7,7 +7,7 @@
   .about-2c
     .container
       .row.position-relative
-        .col-lg-6.hidden-xs.hidden-sm.position-absolute.bottom-zero
+        .col-lg-6.hidden-xs.hidden-sm.position-absolute.bottom-zero.teaser-image
           = image_tag('stock/child.png')
         .col-lg-offset-6
           .description-2c
@@ -42,5 +42,5 @@
           | konkrete Hilfestellung geben möchten, bietet CLARAT eine
           | maßgeschneiderte Übersicht an inhaltlich und geographisch passenden
           | Angeboten.
-      .col-lg-offset-6.hidden-xs.hidden-sm.position-absolute.bottom-zero
+      .col-lg-offset-6.hidden-xs.hidden-sm.position-absolute.bottom-zero.teaser-image
         = image_tag('stock/child.png')
