--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,2 +1,61 @@
 h1= @offer.name
 p= @offer.description
+
+h2 Nächste Schritte
+p= @offer.next_steps
+
+h2 Kontakt
+- if @offer.contact_name?
+  p
+  ' Ansprechpartner:
+  =@offer.contact_name
+- if @offer.telephone?
+  p
+  ' Telefon:
+  =@offer.telephone
+- if @offer.fax?
+  p
+  ' Fax:
+  =@offer.fax
+- if @offer.email?
+  p
+  ' E-Mail:
+  =@offer.email
+
+h2 Wo
+p
+- if @offer.location.name?
+  =@offer.location.name
+p
+=@offer.location.street
+- if @offer.location.addition?
+  p
+  =@offer.location.addition
+p
+=>@offer.location.zip
+=@offer.location.city
+
+h2 Öffnungszeiten
+- unless @offer.openings.empty?
+  -@offer.openings.each do |opening|
+    p
+    =opening.day
+    ' :
+    =opening.open.strftime("%H")
+    | :
+    =opening.open.strftime("%M")
+    '  -
+    =opening.close.strftime("%H")
+    | :
+    =opening.close.strftime("%M")
+
+h2 Anbieter
+=@offer.organization.name
+
+h2 Schlagworte:
+- unless @offer.tags.empty?
+  p
+  -@offer.tags.each do |tag|
+    =tag.name
+    - unless tag == @offer.tags.last
+      ' ,
