some css refactoring, a step in the right direction but far from finished

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,8 +9,22 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+
+// Vendor Stylesheets
+
+@import "vendor/bootstrap-typeahead";
+
+// Mixins to be available everywhere
+
+@import "mixins/all";
+
+// App Layouts
+
+@import "layout/navbar";
+
+// Modules
