--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,6 +1,4 @@
-// TODO Don't put $clarat-yellow: #ffbb1 in all the files...
-
-$clarat-yellow: #ffbb10;
+// TODO: REFACTOR TO l-*
 
 .navbar-transparent {
   background:transparent;
