--- a/app/views/offers/shared/_basic_search.html.slim
+++ b/app/views/offers/shared/_basic_search.html.slim
@@ -1,7 +1,7 @@
 .main-search
   = semantic_form_for SearchForm.new, url: offers_path, html: { method: :get } do |f|
-    = f.input :query, label: false, input_html: { placeholder: 'Suche nach Angeboten...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg' }
-    = f.input :search_location, label: false, input_html: { value: geoloc_to_s, class: 'input-xlg' }
+    = f.input :query, label: false, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg' }
+    = f.input :search_location, label: false, input_html: { value: geoloc_to_s, class: 'input-xlg', placeholder: 'in...' }
     = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
     button.btn.btn-xlg.btn-aligned.icon-white
       .glyphicon.glyphicon-search
