try-a fix-a try

--- a/app/assets/stylesheets/controller/offers.scss
+++ b/app/assets/stylesheets/controller/offers.scss
@@ -65,7 +65,7 @@ body {
 }
 
 .background-image {
-  background: url('background/spielplatz.jpg') no-repeat center center fixed;
+  background: url('/assets/background/spielplatz.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
