--- a/app/assets/stylesheets/controller/offers.css.scss
+++ b/app/assets/stylesheets/controller/offers.css.scss
@@ -10,6 +10,12 @@
   height:300px;
 }
 
+li.JS-highlighted {
+  .search-headline {
+    background: green !important;
+  }
+}
+
 
 
 // !!!!!!!!!!!!!!!!!!!!!!! TODO: REFACTOR !!!!!!!!!!!!!!!!!!!!!!! //
