--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -5,7 +5,7 @@
         = link_to image_tag('logos/clarat-logo-transparent-small.png'), root_path
         .main-search-nav
           = semantic_form_for SearchForm.new, url: offers_path, html: { method: :get } do |f|
-            = f.input :query, label: false, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg' }
+            = f.input :query, label: false, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg typeahead' }
             = f.input :search_location, label: false, input_html: { value: geoloc_to_s, class: 'input-xlg', placeholder: 'in...' }
             = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
             button.btn.btn-xlg.btn-aligned
