--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -8,5 +8,5 @@
             = f.input :query, label: false, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg typeahead' }
             = f.input :search_location, label: false, input_html: { value: geoloc_to_s, class: 'input-xlg', placeholder: 'in...' }
             = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
-            button.btn.btn-xlg.btn-aligned
+            button.btn.btn-xlg.btn-aligned.icon-white
               .glyphicon.glyphicon-search
