basic tag filtering

--- a/app/assets/stylesheets/controller/offers.scss
+++ b/app/assets/stylesheets/controller/offers.scss
@@ -1,9 +1,9 @@
 @import "mixins/all";
 
 #map-container {
-  position: fixed;
-  right: 0;
-  top: 85px;
+  // position: fixed;
+  // right: 0;
+  // top: 85px;
 }
 #map-canvas {
   width:500px;
