statistics for approved models

--- a/app/views/rails_admin/application/statistics.html.slim
+++ b/app/views/rails_admin/application/statistics.html.slim
@@ -54,6 +54,7 @@ css:
     height: 20px;
     padding: 7px 10px 5px 30px;
     margin-right: 10px;
+    cursor: default;
   }
   .graph-info .legend.btn:hover {
     background-position: 0;
