add close button to overlay

--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -44,6 +44,7 @@
 
 - if @update_request
   #unavailable_location_overlay style="background:white;width:500px;"
+    button.unavailable_location_overlay_close X
     p
       | Leider finden sich auf unserer Plattform aktuell nur Angebote aus
       |  Berlin. Wir hoffen aber schon bald auch in anderen Teilen
