--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -50,7 +50,8 @@ h2 Öffnungszeiten
     =opening.close.strftime("%M")
 
 h2 Anbieter
-=@offer.organization_name
+= link_to @offer.organization_name, organization_path(id: @offer.organization)
+/ =@offer.organization_name
 
 - unless @offer.tags.empty?
   h2 Schlagworte:
