--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -2,7 +2,8 @@
   .container.container-full-size
     .row
       = render '/layouts/partials/about_teaser'
-      = render '/offers/shared/basic_search'
+      .main-search
+        = render '/offers/shared/search_form'
 .yellow-background
   .about-2c
     .container
