test suite fixes for #32

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html class='no-js' lang=I18n.locale
     - if controller_name == 'pages'
       = render 'layouts/partials/navigation'
     - else
-      = render 'layouts/partials/search_navigation'
+      = render 'layouts/partials/search_navigation', search_cache: @search_cache
     = yield
     = content_for :view_specific_scripts
     = render 'layouts/partials/footer'
