--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -4,4 +4,4 @@
       .navbar-header.search-nav-image
         = link_to image_tag('logos/clarat-logo-transparent-small.png'), root_path
         .main-search-nav
-          = render '/offers/shared/search_form'
+          = render '/offers/shared/search_form', search_cache: search_cache
