--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -1,4 +1,4 @@
-= semantic_form_for @search_cache, url: offers_path, html: { method: :get } do |f|
+= semantic_form_for search_cache, url: offers_path, html: { method: :get } do |f|
   = f.input :query, label: false, input_html: { placeholder: 'Suche Angebote...', spellcheck: false, autocomplete: 'off', autofocus: true, class: 'input-xlg typeahead' }
   = f.input :search_location, label: false, input_html: { value: geoloc_to_s, class: 'input-xlg', placeholder: 'in...' }
   = f.input :generated_geolocation, as: :hidden, input_html: { class: 'JS-Search-location', value: default_geolocation }
